# ml-evaluation-metrics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  README.md  pyproject.toml  requirements.txt
ml_metrics/src/ml_metrics/classification/: __init__.py  accuracy.py
ml_metrics/tests/classification/: test_accuracy.py
